<resources>
    <string name="app_name">MyContacts</string>
    <string name="action_settings">Settings</string>
    <string name="action_home">Home</string>
    <string name="action_create_contact">Create Contact</string>
    <string name="title_activity_create_contact">Create Contact</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number :</string>
    <string name="view_family">View Family</string>
    <string name="view_friends">View Friends</string>
    <string-array name="group">
        <item></item>
        <item>Friends</item>
        <item>Family</item>
    </string-array>
    <string name="title_activity_view_family">View Family</string>
    <string name="title_activity_friends_contacts">Friends Contacts</string>
    <string name="title_activity_view_friends">View Friends</string>
    <string name="title_activity_view_contact">View Contact</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="delete_contact">Delete Contact</string>

</resources>