<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.mycontacts.MainActivity">
    <item
        android:id="@+id/action_Home"
        android:orderInCategory="1"
        android:title="@string/action_home"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_create_list"
        android:orderInCategory="2"
        android:title="@string/action_create_contact"
        app:showAsAction="never" />
    <item
        android:id="View_Family"
        android:orderInCategory="3"
        android:title="@string/view_family"
        app:showAsAction="never" />

    <item
        android:id="View_Friends"
        android:orderInCategory="4"
        android:title="@string/view_friends"
        app:showAsAction="never" />
</menu>