<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.mycontacts.ViewContact">
    <item
        android:id="@+id/delete_contact"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/delete_contact"
        app:showAsAction="always"
        android:onClick="deleteContact"
        />
    <item
        android:id="@+id/action_Home"
        android:orderInCategory="1"
        android:title="@string/action_home"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_create_list"
        android:orderInCategory="2"
        android:title="@string/action_create_contact"
        app:showAsAction="never" />
</menu>